refactor(app-android)!: use Kotlin instead of Java